--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Practice3</string>
+
+    <string name="supermarket_database">Supermarket Database</string>
+
 </resources>
